# nmea_navsat_driver

./: CMakeLists.txt  package.xml
msg/: AVR.msg  GGK.msg
scripts/: log_publisher.py  nmea_serial_driver
src/libnmea_navsat_driver/: driver.py  parser.py
